@@ -1,6 +1,6 @@
 CFLAGS?= -O2 -Wall -W
 
-all: dhcp_release dhcp_lease_time
+all: dhcp_release dhcp_release6 dhcp_lease_time
 
 clean:
-	rm -f *~ *.o core dhcp_release dhcp_lease_time
+	rm -f *~ *.o core dhcp_release dhcp_release6 dhcp_lease_time
