@@ -65,6 +65,12 @@ version 2.76
 	    --servers-file to define upstream DNS servers. Thanks to
 	    Scott Bonar for the bug report.
 
+	    Move the dhcp_release and dhcp_lease_time tools from 
+	    contrib/wrt to contrib/lease-tools.
+
+	    Add dhcp_release6 to contrib/lease-tools. Many thanks 
+	    to Sergey Nechaev for this code.
+
 
 version 2.75
             Fix reversion on 2.74 which caused 100% CPU use when a 
